x86: Properly merge -z ibt and -z shstk

Merge -z ibt and -z shstk only with GNU_PROPERTY_X86_FEATURE_1_AND, not
any GNU_PROPERTY_X86_UINT32_AND_XXX properties.

bfd/

	PR ld/26711
	* elfxx-x86.c (_bfd_x86_elf_merge_gnu_properties): Merge -z ibt
	and -z shstk only with GNU_PROPERTY_X86_FEATURE_1_AND.

ld/

	PR ld/26711
	* testsuite/ld-i386/i386.exp: Run ld/26711 tests.
	* testsuite/ld-x86-64/x86-64.exp: Likewise.
	* testsuite/ld-i386/pr26711-1.d: Likewise.
	* testsuite/ld-i386/pr26711-2.d: Likewise.
	* testsuite/ld-i386/pr26711-3.d: Likewise.
	* testsuite/ld-x86-64/pr26711-1-x32.d: Likewise.
	* testsuite/ld-x86-64/pr26711-1.d: Likewise.
	* testsuite/ld-x86-64/pr26711-2-x32.d: Likewise.
	* testsuite/ld-x86-64/pr26711-2.d: Likewise.
	* testsuite/ld-x86-64/pr26711-3-x32.d: Likewise.
	* testsuite/ld-x86-64/pr26711-3.d: Likewise.
	* testsuite/ld-x86-64/pr26711.s: Likewise.

(cherry picked from commit 574df58f5295ef2728526e6a73b5f429b05f2a8c)